tests/ui/pattern/usefulness/floats.stderr
error[E0004]: non-exhaustive patterns: `_` not covered
  --> $DIR/floats.rs:11:11
   |
LL |     match 0.0 {
   |           ^^^ pattern `_` not covered
   |
   = note: the matched value is of type `f64`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern or an explicit pattern as shown
   |
LL ~         0.0..=1.0 => {},
LL +         _ => todo!()
   |

error: unreachable pattern
  --> $DIR/floats.rs:19:9
   |
LL |         0.01f64 => {}
   |         ^^^^^^^
   |
note: the lint level is defined here
  --> $DIR/floats.rs:3:9
   |
LL | #![deny(unreachable_patterns)]
   |         ^^^^^^^^^^^^^^^^^^^^

error: unreachable pattern
  --> $DIR/floats.rs:20:9
   |
LL |         0.02f64 => {}
   |         ^^^^^^^

error: unreachable pattern
  --> $DIR/floats.rs:21:9
   |
LL |         6.5f64 => {}
   |         ^^^^^^

error: unreachable pattern
  --> $DIR/floats.rs:23:9
   |
LL |         1.0f64..=4.0f64 => {}
   |         ^^^^^^^^^^^^^^^

error: unreachable pattern
  --> $DIR/floats.rs:35:9
   |
LL |         0.01f32 => {}
   |         ^^^^^^^

error: unreachable pattern
  --> $DIR/floats.rs:36:9
   |
LL |         0.02f32 => {}
   |         ^^^^^^^

error: unreachable pattern
  --> $DIR/floats.rs:37:9
   |
LL |         6.5f32 => {}
   |         ^^^^^^

error: aborting due to 8 previous errors

For more information about this error, try `rustc --explain E0004`.
